-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Execution
-
Fully Compatible
-
QE 2024-03-18
-
None
-
None
-
None
-
None
-
None
-
None
-
None
While enabling feature flag for query settings it was discovered that get_executor fails to apply {queryFramework: "sbe"} to the query if internalQueryFrameworkControl server parameter set to trySbeEngine. Before that query settings tests were only running in the suites that have featureFlagSbeFull.