SERVER-87425 Prioritize query framework from query settings over the one from server parameters (#19587)

GitOrigin-RevId: 3ca1bac700a54470e11a64611268908316834704